# meteor-mobile

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
annotations/: build.gradle.kts
api/: build.gradle.kts
api-rs/: build.gradle.kts
api/src/main/java/eventbus/: Events.kt
app/: build.gradle.kts
app-android/: build.gradle.kts  proguard-rules.pro
app-android/src/main/: AndroidManifest.xml
app-android/src/main/java/meteor/: AndroidMain.kt  Hooks.kt
app-android/src/main/res/layout/: activity_main.xml
app-android/src/main/res/values/: strings.xml
app-common/: build.gradle.kts
app-common/src/main/java/meteor/: Main.kt  Overlay.kt  Overlaymanager.kt
app-desktop/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/meteor/: Configuration.kt  Hooks.kt  Main.kt  MainActivity.kt  Overlaymanager.kt  PluginList.kt
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
awt/: build.gradle.kts
awt/src/main/cpp/: CMakeLists.txt  awtcompat_native_components.c
awt/src/main/cpp/common/: exceptions.h
awt/src/main/cpp/headers/: awtcompat_native_components.h
awt/src/main/cpp/lcmm/: NativeCMM.c  NativeCMM.h  NativeImageFormat.c  NativeImageFormat.h
cache/: build.gradle.kts
deobfuscator/: build.gradle.kts
eventbus/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
http/: build.gradle.kts
injector/: build.gradle.kts
logger/: build.gradle.kts
mixins/: build.gradle.kts
osrs/: build.gradle.kts
scripts/: build.gradle.kts
(+1002 files in other folders)
